--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 __pychache__
-_pychache_
+GuardarPuntos.cpython-38.pyc
+IA.cpython-38.pyc
+validez.cpython-38.pyc
+Configuracion.cpython-38.pyc
+Puntuaciones.cpython-38.pyc
+Tablero.cpython-38.pyc
