--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,5 @@ IA.cpython-38.pyc
 validez.cpython-38.pyc
 Configuracion.cpython-38.pyc
 Puntuaciones.cpython-38.pyc
-Tablero.cpython-38.pyc
 Letras.cpython-38.pyc
+*.cpython-38.pyc
