añadido prints para debugging

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,7 @@ IA.cpython-38.pyc
 validez.cpython-38.pyc
 Configuracion.cpython-38.pyc
 Puntuaciones.cpython-38.pyc
-Letras.cpython-38.pyc
 *.cpython-38.pyc
+__pycache__\*.pyc
+Letras.cpython-38.pyc
+__pycache__\Letras.cpython-38.pyc
